// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardSTepButtons should add custom className to toolbar 1`] = `
<RenderWithProvider>
  <Component
    onSubmit={[Function]}
  >
    <WizardStepButtons
      buttonLabels={
        Object {
          "back": "Back",
          "cancel": "Cancel",
          "next": "Next",
          "submit": "Submit",
        }
      }
      buttonsClassName="foo-class"
      formOptions={
        Object {
          "getState": [Function],
          "handleSubmit": [MockFunction],
          "onCancel": [MockFunction],
          "submit": [MockFunction],
          "valid": true,
        }
      }
      handleNext={[MockFunction]}
      handlePrev={[MockFunction]}
    >
      <footer
        className="pf-c-wizard__footer foo-class"
      >
        <Component>
          <NextButton
            getState={[Function]}
            handleNext={[MockFunction]}
            handleSubmit={[MockFunction]}
            nextLabel="Next"
            onCancel={[MockFunction]}
            submit={[MockFunction]}
            submitLabel="Submit"
            valid={true}
          >
            <Button
              isDisabled={false}
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              <button
                aria-disabled={false}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[Function]}
                role={null}
                type="button"
              >
                Submit
              </button>
            </Button>
          </NextButton>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="secondary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-secondary"
              data-ouia-component-id="OUIA-Generated-Button-secondary-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[MockFunction]}
              role={null}
              type="button"
            >
              Back
            </button>
          </Button>
          <div
            className="pf-c-wizard__footer-cancel"
          >
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="link"
            >
              <button
                aria-disabled={false}
                aria-label={null}
                className="pf-c-button pf-m-link"
                data-ouia-component-id="OUIA-Generated-Button-link-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[MockFunction]}
                role={null}
                type="button"
              >
                Cancel
              </button>
            </Button>
          </div>
        </Component>
      </footer>
    </WizardStepButtons>
  </Component>
</RenderWithProvider>
`;

exports[`<WizardSTepButtons should render correctly 1`] = `
<RenderWithProvider>
  <Component
    onSubmit={[Function]}
  >
    <WizardStepButtons
      buttonLabels={
        Object {
          "back": "Back",
          "cancel": "Cancel",
          "next": "Next",
          "submit": "Submit",
        }
      }
      formOptions={
        Object {
          "getState": [Function],
          "handleSubmit": [MockFunction],
          "onCancel": [MockFunction],
          "submit": [MockFunction],
          "valid": true,
        }
      }
      handleNext={[MockFunction]}
      handlePrev={[MockFunction]}
    >
      <footer
        className="pf-c-wizard__footer "
      >
        <Component>
          <NextButton
            getState={[Function]}
            handleNext={[MockFunction]}
            handleSubmit={[MockFunction]}
            nextLabel="Next"
            onCancel={[MockFunction]}
            submit={[MockFunction]}
            submitLabel="Submit"
            valid={true}
          >
            <Button
              isDisabled={false}
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              <button
                aria-disabled={false}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[Function]}
                role={null}
                type="button"
              >
                Submit
              </button>
            </Button>
          </NextButton>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="secondary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-secondary"
              data-ouia-component-id="OUIA-Generated-Button-secondary-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[MockFunction]}
              role={null}
              type="button"
            >
              Back
            </button>
          </Button>
          <div
            className="pf-c-wizard__footer-cancel"
          >
            <Button
              onClick={[MockFunction]}
              type="button"
              variant="link"
            >
              <button
                aria-disabled={false}
                aria-label={null}
                className="pf-c-button pf-m-link"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[MockFunction]}
                role={null}
                type="button"
              >
                Cancel
              </button>
            </Button>
          </div>
        </Component>
      </footer>
    </WizardStepButtons>
  </Component>
</RenderWithProvider>
`;
